# crouton-sync

./: .gitignore  README.md  pyproject.toml
docs/: CROUTON_INTERNALS.md
src/crouton_sync/: __init__.py  cli.py  crouton_db.py  crumb.py  markdown.py  models.py  quantity.py  sync.py  verify.py
tests/: test_crouton_db.py  test_crumb.py  test_markdown.py  test_quantity.py  test_roundtrip.py  test_verify.py
