[project]
name = "crouton-sync"
version = "0.2.1"
description = "Bidirectional sync between Crouton recipe app and Obsidian Markdown"
readme = "README.md"
authors = [
    { name = "Max Wood", email = "bridges.wood@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
crouton-sync = "crouton_sync.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
